--- a/.github/workflows/generate_emoji.yml
+++ b/.github/workflows/generate_emoji.yml
@@ -25,7 +25,8 @@ jobs:
       - run: |
           python converter/converter.py
 
-      - name: Push updated manifest.txt
+      - name: Push updated emoji
+        shell: pwsh
         run: |
           git config --global user.name 'github-actions'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
